# OpenGLProject

./: CMakeLists.txt
include/: camera.h
include/assimp/: revision.h
include/glad/: glad.h
shader/: light.fs  multi_lights.fs  vertexShader.vs
src/: box.cpp  glad.c  light.cpp  load_mesh.cpp  main.cpp  multi_lights.cpp
